# dns_resolver

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  benchmark.cpp  run_benchmarks.sh
docs/: design.md  packet_format.md  rfc_references.md
scripts/: build_and_test.sh  check_domains.sh  check_project.sh  format.sh  lint.sh  performance_test.sh
src/: main.cpp
src/cli/: application.cpp  application.h  cli_parser.cpp  cli_parser.h  output_formatter.cpp  output_formatter.h
src/config/: config.cpp  config.h  root_servers.h
src/net/: tcp_client.cpp  tcp_client.h  udp_client.cpp  udp_client.h
src/resolver/: cache.cpp  cache.h  packet_builder.cpp  packet_builder.h  packet_parser.cpp  packet_parser.h  query_engine.cpp  query_engine.h  recursion_handler.cpp  recursion_handler.h  resolver.cpp  resolver.h  response_processor.cpp  response_processor.h  types.h  utils.cpp  utils.h
tests/: CMakeLists.txt  test_cache.cpp  test_integration.cpp  test_packet.cpp  test_resolver.cpp
tests/data/: domains.txt
tests/results/: summary.txt
